data/derived/sp14/progs/unify/prog3134.ml.out
Characters 28-52:
  wwhile (fun x -> not x,(f b)=b),b;;
         ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a function, the expected type is
('a -> 'a * bool) * 'a
